# esp32-hello

./: .gitignore  .gitmodules  Cargo.toml  Cross.toml  ReadMe.md  Xargo.toml  build.rs  build.sh
.cargo/: config
.github/workflows/: ci.yml
alloc-esp32/: Cargo.toml
alloc-esp32/src/: lib.rs
app/: Cargo.toml  Makefile  build.rs  sdkconfig  sdkconfig.esp32  sdkconfig.esp8266
app/components/compiler_builtins/: atomics.c  component.mk
app/examples/: memory_leak.rs  mutex_rwlock.rs  nvs.rs  thread_local.rs  wifi_scan.rs
app/src/: dns.rs  index.html  main.rs  wifi_manager.rs
dnsparse/src/: answer.rs  frame.rs  header.rs  lib.rs  name.rs  question.rs
dnsparse/tests/: main.rs
esp-idf-hal/: Cargo.toml  build.rs
esp-idf-hal/src/: esp_error.rs  ets.rs  heap.rs  interface.rs  lib.rs  netif.rs  nvs.rs  uart.rs  wifi.rs
esp-idf-hal/src/nvs/: get_set.rs  mod.rs
esp-idf-hal/src/wifi/: ap_config.rs  mod.rs  scan.rs  sta_config.rs
esp-idf-sys/: Cargo.toml
esp-idf-sys/src/: lib.rs
esp32-hal/: Cargo.toml
esp32-hal/src/: gpio.rs  lib.rs  nvs.rs  wifi.rs
esp32-sys/: Cargo.toml  Makefile  build.rs
esp32-sys/src/: bindings.h
