[workspace]
members = [
  "dnsparse",
  "esp-idf-sys",
  "esp32-hal",
  "alloc-esp32",
  "app",
]

[profile.dev]
debug = false
panic = "unwind"

[profile.release]
lto = true
debug = false
panic = "unwind"

[patch.crates-io]
libc = { git = "https://github.com/reitermarkus/libc", branch = "xtensa-support" }
