[package]
name = "esp32-hello"
version = "0.1.0"
edition = "2018"

[dependencies]
dnsparse = { path = "../dnsparse" }
esp-idf-bindgen = { path = "../esp-idf-bindgen" }
esp-idf-hal = { path = "../esp-idf-hal" }
embedded-hal = "0.2"
bitflags = "1"
libc = "0.2"
httparse = "1"
url = "2"
futures = "0.3"
macaddr = "1"
