[package]
name = "app"
version = "0.1.0"
edition = "2018"

[dependencies]
dnsparse = "0.1"
esp-idf-bindgen = "0.1"
esp-idf-hal = { path = "../esp-idf-hal" }
esp32-hal = { version = "0.1",  default-features = false }
embedded-hal = "0.2"
bitflags = "1"
libc = "0.2"
httparse = "1"
url = "2"
futures = "0.3"
macaddr = "1"

[build-dependencies]
jobserver = "0.1"
