[package]
name = "esp-idf-hal"
version = "0.1.0"
edition = "2018"

[dependencies]
bitflags = "1"
esp-idf-bindgen = { path = "../esp-idf-bindgen" }
embedded-hal = { version = "0.2", features = ["unproven"] }
static_assertions = "1"
macaddr = "1"
memchr = "2"

[features]
default = ["std"]
std = []

panic_handler = []
